--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -5,9 +5,16 @@
 .bg-gray {
     background: #d0453e2e;
 }
+
 .add-row .card-title {
+     font-size: 18px;
+    width: 100%;
+    margin-bottom: 25px;
+}
+.dashboard .add-row .card-title {
     font-size: 18px;
     width: 100%;
+    margin-bottom: 10px;
 }
 .add-row .card-title:after {
     display: block;
@@ -20,4 +27,84 @@
 }
 a.add-element {
     float: right;
+}
+.delete, .edit , .delete:hover, .edit:hover , .btn-danger:not(:disabled):not(.disabled):active:focus , .btn-danger:not(:disabled):not(.disabled):active{
+    padding: 3px;
+    background: transparent;
+    color: #222;
+    border: 0;
+    display: inline-block;
+    max-width: 20px;
+    width: 20px;
+}
+.edit ~ form {
+    display: inline;
+}
+.table td , .table tr td ~ th{
+    padding: 10px 15px;
+}
+.card-boxx {
+    display: inline-block;
+    width: 100%;
+}
+.tt-box {
+    display: inline-block;
+    width: 83%;
+}
+.ico-box {
+    width: 17%;
+    display: inline;
+    vertical-align: text-bottom;
+    text-align: center;
+    margin: 0 auto;
+}
+span.icon-card svg {
+    width: 30px;
+    height: 35px;
+}
+.tt-box .number-font {
+    margin-top: 10px;
+}
+.dash-cards .card-body {
+    padding: 20px 20px;
+}
+.dash-cards .card {
+    margin-bottom: 25px;
+}
+
+.dashboard .add-row .card-body {
+    padding: 0px 20px 15px;
+}
+thead {
+    background: #f4f4f491;
+    color: #222;
+}
+thead tr th{
+     color: #222 !important;
+}
+.card-header {
+    border-bottom: 0;
+    padding-bottom: 10px;
+    padding-top: 20px;
+}
+@media (max-width:991px) {
+    .footer {
+        margin-left: 0;
+        width: 100%
+    }
+    footer {
+    padding: 5px !important;
+}
+.footer p {
+    font-size: 10px;
+    margin-bottom: 0;
+}
+.add-row .card-title {
+    font-size: 15px;
+    width: 100%;
+}
+a.add-element {
+    float: right;
+    font-size: 14px;
+}
 }
