--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -28094,7 +28094,8 @@ address p {
     top: 0;
     -webkit-transition: width .1s ease, margin .1s ease-out;
     transition: width .1s ease, margin .1s ease-out;
-    z-index: 999
+    z-index: 999;
+    background: #fff
 }
 
 .sidebar .sidebar-header {
@@ -28131,6 +28132,7 @@ address p {
 }
 .sidebar .sidebar-header .sidebar-brand img{
 	width:100%;
+	    max-width: 50px;
 }
 .sidebar .sidebar-header .sidebar-brand span {
     color: #222;
@@ -28139,7 +28141,8 @@ address p {
 
 .sidebar .sidebar-header .sidebar-toggler {
     cursor: pointer;
-    width: 150px;
+    /*width: 150px;*/
+    width:35px;
     padding-left: 15px;
 }
 
@@ -28389,9 +28392,9 @@ address p {
     position: relative;
     border-right: 1px solid #f2f4f9;
     height: 100%;
-    -webkit-box-shadow: 0 8px 10px 0 rgba(183, 192, 206, .2);
+   /* -webkit-box-shadow: 0 8px 10px 0 rgba(183, 192, 206, .2);
     box-shadow: 0 8px 10px 0 rgba(183, 192, 206, .2);
-    background: #fff
+    background: #fff*/
 }
 
 .sidebar .sidebar-body .nav {
@@ -28400,6 +28403,7 @@ address p {
     -webkit-flex-direction: column;
     flex-direction: column;
     padding: 25px 25px 50px 25px
+    
 }
 
 .sidebar .sidebar-body .nav .nav-item {
